# gigachat-telegram-bot

./: .gitignore  README.md  example.secrets.yaml  gigachat-bot.service  gitignore.txt  install.sh  main.py  pyproject.toml  requirements.txt  secrets.yaml.example
