[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.1.31",
    "nest-asyncio>=1.6.0",
    "openai>=1.63.0",
    "paramiko>=3.5.1",
    "pillow>=10.2.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot==20.8",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "telegram>=0.0.1",
    "twilio>=9.4.5",
    "urllib3>=2.0.7",
    "voluptuous>=0.13.1",
]
